// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkForPrimitive bundled executable does not exist, primitive not installed globally 1`] = `"Please ensure that Primitive (https://github.com/fogleman/primitive, written in Golang) is installed and globally available"`;

exports[`runPrimitive executes primitive with custom config, applying default number of primitives 1`] = `
Array [
  "/VENDOR/DIR/primitive-linux-x64",
  Array [
    "-i",
    "/path/to/input/file.jpg",
    "-o",
    "-",
    "-n",
    8,
    "-m",
    5,
    "-s",
    200,
  ],
]
`;

exports[`runPrimitive executes primitive with default config 1`] = `
Array [
  "/VENDOR/DIR/primitive-linux-x64",
  Array [
    "-i",
    "/path/to/input/file.jpg",
    "-o",
    "-",
    "-n",
    8,
    "-m",
    0,
    "-s",
    200,
  ],
]
`;

exports[`runPrimitive executes primitive with landscape dimensions 1`] = `
Array [
  "/VENDOR/DIR/primitive-linux-x64",
  Array [
    "-i",
    "/path/to/input/file.jpg",
    "-o",
    "-",
    "-n",
    8,
    "-m",
    0,
    "-s",
    600,
  ],
]
`;
